trying to fix some css issues
when setting the html and css height to 100%, the card got cut off in mobile landscape mode.

--- a/style/main.scss
+++ b/style/main.scss
@@ -23,11 +23,11 @@ $clr-white: #fff;
 }
 
 html {
-  height: 100%;
+  min-height: 100%;
 }
 body {
   font-family: "Kumbh Sans", sans-serif;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -126,9 +126,11 @@ body {
 @media only screen and (max-width: 53.125rem) {
   .container {
     box-shadow: unset;
-    min-width: 100%;
-    min-height: 100%;
+    min-width: 100vw;
+    min-height: 100vh;
     background-position: bottom 40vh right 58vw, top 40vh left 45vw;
+    margin: 0;
+    padding: 2rem 0;
   }
 }
 
